# simple_lang_classifier

./: .gitignore  app.py  index.html  pyproject.toml  train.py  train_lightning.py
runs/lightning_v3/: best-checkpoint-epoch=97-val_acc=0.8411.ckpt
